--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,6 @@ lazy-object-proxy==1.4.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==7.1.0
-nltk==3.4.4
 packaging==19.0
 pluggy==0.12.0
 py==1.8.0
@@ -26,6 +25,7 @@ pyparsing==2.4.0
 pytest==5.0.1
 requests==2.22.0
 six==1.12.0
+style==1.1.0
 typed-ast==1.4.0
 urllib3==1.25.3
 wcwidth==0.1.7
